5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4138/executions/1865_1645.log
== TEST (2019-07-04 10:08:42) 
-- CODE:
from numpy import *

vet = array(eval(input("insira:")))
x = 0
for i in range(size(vet)):
	if(vet[i] > = 2000):
		x = x + 1


a = zeros(x,dtype = int)
k = 0
 for j in range(size(vet)):
	vet[i] = aux
	aux = a[j]
	k = k +1
		j = j + 1
	
	
		
-- ERROR:
File "XXXX", line 6
    if(vet[i] > = 2000):
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:08:47) 
-- CODE:
from numpy import *

vet = array(eval(input("insira:")))
x = 0
for i in range(size(vet)):
	if(vet[i] > = 2000):
		x = x + 1


a = zeros(x,dtype = int)
k = 0
 for j in range(size(vet)):
	vet[i] = aux
	aux = a[j]
	k = k +1
		j = j + 1
	
	
		
-- ERROR:
File "XXXX", line 6
    if(vet[i] > = 2000):
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:08:54) 
-- CODE:
from numpy import *

vet = array(eval(input("insira:")))
x = 0
for i in range(size(vet)):
	if(vet[i] >= 2000):
		x = x + 1


a = zeros(x,dtype = int)
k = 0
 for j in range(size(vet)):
	vet[i] = aux
	aux = a[j]
	k = k +1
		j = j + 1
	
	
		
-- ERROR:
File "XXXX", line 12
    for j in range(size(vet)):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:09:02) 
-- CODE:
from numpy import *

vet = array(eval(input("insira:")))
x = 0
for i in range(size(vet)):
	if(vet[i] >= 2000):
		x = x + 1


a = zeros(x,dtype = int)
k = 0
for j in range(size(vet)):
	vet[i] = aux
	aux = a[j]
	k = k +1
		j = j + 1
	
	
		
-- ERROR:
File "XXXX", line 16
    j = j + 1
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:09:08) 
-- CODE:
from numpy import *

vet = array(eval(input("insira:")))
x = 0
for i in range(size(vet)):
	if(vet[i] >= 2000):
		x = x + 1


a = zeros(x,dtype = int)
k = 0
for j in range(size(vet)):
	vet[i] = aux
	aux = a[j]
	k = k +1
	j = j + 1
	
	
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:09:40) 
-- CODE:
from numpy import *

vet = array(eval(input("insira:")))
x = 0
for i in range(size(vet)):
	if(vet[i] >= 2000):
		x = x + 1


a = zeros(x,dtype = int)
k = 0
aux = 0
for j in range(size(vet)):
	vet[i] = aux
	aux = a[j]
	k = k +1
	j = j + 1
	
	
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:10:03) 
-- CODE:
from numpy import *

vet = array(eval(input("insira:")))
x = 0
for i in range(size(vet)):
	if(vet[i] >= 2000):
		x = x + 1


a = zeros(x,dtype = int)
k = 0
aux = 0
for j in range(size(vet)):
	vet[i] = aux[k]
	aux[k] = a[j]
	k = k +1
	j = j + 1
	
	
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:41:09) 
-- CODE:
from numpy import *

vet = array(eval(input("insira:")))
x = 0
for i in range(size(vet)):
	if(vet[i] >= 2000):
		x = x + 1


a = zeros(x,dtype = int)
k = 0
aux = 0
for j in range(size(vet)):
	vet[i] = aux[k]
	aux[k] = a[j]
	k = k +1
	j = j + 1
	
	
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:47:41) 
-- CODE:
from numpy import *

vet = array(eval(input("insira:")))
x = 0
for i in range(size(vet)):
	if(vet[i] >= 2000):
		x = x + 1


a = zeros(x,dtype = int)
k = 0
aux = 0
for j in range(size(vet)):
	vet[i] = aux[k]
	aux[k] = a[j]
	k = k +1
	j = j + 1
	
	
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:48:04) 
-- CODE:
from numpy import *

vet = array(eval(input("insira:")))
x = 0
for i in range(size(vet)):
	if(vet[i] >= 2000):
		x = x + 1


a = zeros(x,dtype = int)
k = 0
aux = 0
for j in range(size(vet)):
	vet[i] = aux
	aux[k] = a[j]
	k = k +1
	j = j + 1
	
	
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:49:21) 
-- CODE:
from numpy import *

vet = array(eval(input("insira:")))
x = 0
for i in range(size(vet)):
	if(vet[i] >= 2000):
		x = x + 1


a = zeros(x,dtype = int)
k = 0
aux = 0
for j in range(size(vet)):
	vet[j] = aux
	aux = a[k]
	k = k + 1
	j = j + 1
	
print(x)
print(a)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:49:37) 
-- CODE:
from numpy import *

vet = array(eval(input("insira:")))
x = 0
for i in range(size(vet)):
	if(vet[i] >= 2000):
		x = x + 1


a = zeros(x,dtype = int)
k = 0
aux = 0
for j in range(size(vet)):
	vet[j] = aux
	aux = a[j]
	k = k + 1
	j = j + 1
	
print(x)
print(a)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:54:32) 
-- CODE:
from numpy import *

vet = array(eval(input("insira:")))
x = 0
for i in range(size(vet)):
	if(vet[i] >= 2000):
		x = x + 1


a = zeros(x,dtype = int)
k = 0
aux = 0
for j in range(size(vet)):
	vet[j] = a[j]
	
	k = k + 1
	j = j + 1
	
print(x)
print(a)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
